<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_avatar"
        android:src="@drawable/iot_app_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/iv_avatar_content" />

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/iv_avatar"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/tv_topic_default" />

        <TextView
            android:id="@+id/tv_broker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_broker_default" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@+id/ll_content" >

        <TextView
            android:id="@+id/tv_protocol"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/tv_protocol_default"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/xui_btn_green_normal_color" />

    </RelativeLayout>

</RelativeLayout>